--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,13 @@
-header{
-    background-color: #383d58;
+*{
+    margin:0;
+    padding:0;
+ }
+cabecalho{
+    background-color:#424E61;
     color:white;
+    display:flex;
+    justify-content:space-arround;
+    align-items:centen;
+    paddng:24px 0;
 }
 .cabecalho - imagem{} 
