--- a/Style.css
+++ b/Style.css
@@ -9,5 +9,12 @@ cabecalho{
     justify-content:space-arround;
     align-items:centen;
     paddng:24px 0;
+ }
+.cabecalho - imagem {
+    width:20%
+ }
+.cabecalho-luta-item{
+    display:inline-block;
+    margin:0 16px;
+    font-size:24px;
 }
-.cabecalho - imagem{} 
