--- a/Style.css
+++ b/Style.css
@@ -43,7 +43,9 @@ font-family: "Rubik Scribble", system-ui;
     .escola-titulo {
         padding: 24px 0;
     }
-
+    .estudante-imagem {
+        width: 24px;
+        padding: 4px
 
 
 
