--- a/Style.css
+++ b/Style.css
@@ -45,7 +45,12 @@ font-family: "Rubik Scribble", system-ui;
     }
     .estudante-imagem {
         width: 24px;
-        padding: 4px
+        padding: 4px 8px;
+    }
+    .estudante-icone{
+        width: 24px;
+        padding: 4px 8px;
+    }
 
 
 
