--- a/Style.css
+++ b/Style.css
@@ -51,6 +51,9 @@ font-family: "Rubik Scribble", system-ui;
         width: 24px;
         padding: 4px 8px;
     }
-
+        .estudante-div{
+            tent-aling:center;
+            padding:16px 0
+        }
 
 
